--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ torch>=1.8.0  # see https://pytorch.org/get-started/locally (recommended)
 torchvision>=0.9.0
 tqdm>=4.64.0
 ultralytics>=8.0.147
-# protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
+protobuf<=3.20.1  # https://github.com/ultralytics/yolov5/issues/8012
 
 # Logging ---------------------------------------------------------------------
 # tensorboard>=2.4.1
@@ -28,15 +28,15 @@ pandas>=1.1.4
 seaborn>=0.11.0
 
 # Export ----------------------------------------------------------------------
-# coremltools>=6.0  # CoreML export
-# onnx>=1.10.0  # ONNX export
-# onnx-simplifier>=0.4.1  # ONNX simplifier
-# nvidia-pyindex  # TensorRT export
-# nvidia-tensorrt  # TensorRT export
- scikit-learn<=1.1.2  # CoreML quantization
-# tensorflow>=2.4.0,<=2.13.1  # TF exports (-cpu, -aarch64, -macos)
-# tensorflowjs>=3.9.0  # TF.js export
-# openvino-dev>=2023.0  # OpenVINO export
+coremltools>=6.0  # CoreML export
+onnx>=1.10.0  # ONNX export
+onnx-simplifier>=0.4.1  # ONNX simplifier
+nvidia-pyindex  # TensorRT export
+nvidia-tensorrt  # TensorRT export
+scikit-learn<=1.1.2  # CoreML quantization
+tensorflow>=2.4.0,<=2.13.1  # TF exports (-cpu, -aarch64, -macos)
+tensorflowjs>=3.9.0  # TF.js export
+openvino-dev>=2023.0  # OpenVINO export
 
 # Deploy ----------------------------------------------------------------------
 setuptools>=65.5.1 # Snyk vulnerability fix
