--- a/config.json
+++ b/config.json
@@ -7,11 +7,11 @@
     },
     "training-options":
     {
-        "weights": "",
-        "cfg": "models/yolov5m.yaml",
+        "weights": "yolo5s-seg.pt",
+        "cfg": "models/yolov5s.yaml",
         "data": "data/project-dataset.yaml",
         "hyp": "data/hyps/hyp.scratch-med.yaml",
-        "epochs": 100,
+        "epochs": 20,
         "batch": 8,
         "img-size": 640,
         "name": "aerial-detection-project",
