--- a/config.json
+++ b/config.json
@@ -17,7 +17,7 @@
         "name": "aerial-detection-project",
         "project": "../drive/MyDrive/deep-learning_drone/colab_run/",
         "checkpoint": 5,
-        "resume": true,
+        "resume": "../drive/MyDrive/deep-learning_drone/colab_run/aerial-detection-project/weights/last.pt",
         "workers": 60
     }
 }
